--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings":  {
     "DefaultConnection": "Data Source = DatingApp.DB"
   },
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
